[gd_scene load_steps=10 format=3 uid="uid://ecedp0vfnmny"]

[ext_resource type="PackedScene" uid="uid://btr7i0mid10dh" path="res://scene/bg_audio.tscn" id="2_8hgqc"]
[ext_resource type="Texture2D" uid="uid://chad0b35pilne" path="res://P.I.G/background.jpg" id="2_hdk2m"]
[ext_resource type="Script" path="res://Scripts/CanvasLayer.gd" id="2_knwgp"]
[ext_resource type="FontFile" uid="uid://b2hdbd13qdmqq" path="res://TherenRegular-2Oevd.otf" id="2_xoomu"]
[ext_resource type="Script" path="res://Scripts/ScoreLabel.gd" id="4_6m22j"]
[ext_resource type="Texture2D" uid="uid://b5koofacibdqd" path="res://P.I.G/coin1.png" id="5_ak3f7"]
[ext_resource type="Texture2D" uid="uid://cr4n6napv5m60" path="res://P.I.G/c.png" id="7_ww6yq"]

[sub_resource type="FontVariation" id="FontVariation_hwowv"]

[sub_resource type="LabelSettings" id="LabelSettings_sfdg3"]
font = SubResource("FontVariation_hwowv")
font_size = 32
font_color = Color(1, 1, 1, 0.933333)

[node name="MainMenu" type="Node"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("2_knwgp")

[node name="Main" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Main/CenterContainer"]
custom_minimum_size = Vector2(500, 256)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Main/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 8
theme_override_constants/line_spacing = 8
theme_override_fonts/font = ExtResource("2_xoomu")
theme_override_font_sizes/font_size = 60
text = "Space Hop"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonPlay" type="Button" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_xoomu")
theme_override_font_sizes/font_size = 30
text = "Play"

[node name="ButtonShop" type="Button" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_xoomu")
theme_override_font_sizes/font_size = 30
text = "Shop"

[node name="ButtonSettings" type="Button" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_xoomu")
theme_override_font_sizes/font_size = 30
text = "Settings"

[node name="ButtonQuit" type="Button" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xoomu")
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="Settings" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Settings/CenterContainer"]
custom_minimum_size = Vector2(500, 256)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Settings/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 8
theme_override_constants/line_spacing = 8
theme_override_font_sizes/font_size = 60
text = "Space Hop"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Setting 1" type="Label" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 0
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 45
text = "Sound"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Setting 2" type="Label" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 0
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 45
text = "Music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonSettingsBack" type="Button" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="AudioStreamPlayer" parent="." instance=ExtResource("2_8hgqc")]

[node name="SpaceBG" type="Sprite2D" parent="."]
position = Vector2(515, 639)
scale = Vector2(1.14944, 0.79875)
texture = ExtResource("2_hdk2m")

[node name="MoneyDisplay" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="MoneyDisplay"]
texture_filter = 1
offset_left = 622.0
offset_top = 35.0
offset_right = 707.0
offset_bottom = 80.0
text = "0"
label_settings = SubResource("LabelSettings_sfdg3")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_6m22j")

[node name="Coin" type="Sprite2D" parent="MoneyDisplay"]
position = Vector2(604.25, 58)
scale = Vector2(0.121777, 0.115288)
texture = ExtResource("5_ak3f7")

[node name="C" type="Sprite2D" parent="."]
position = Vector2(515, 361)
scale = Vector2(0.16875, 0.185)
texture = ExtResource("7_ww6yq")

[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonPlay" to="CanvasLayer" method="_on_button_play_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonShop" to="CanvasLayer" method="_on_button_shop_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonSettings" to="CanvasLayer" method="_on_button_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonQuit" to="CanvasLayer" method="_on_button_quit_pressed"]
[connection signal="pressed" from="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/ButtonSettingsBack" to="CanvasLayer" method="_on_button_settings_back_pressed"]
